--- a/login.html
+++ b/login.html
@@ -45,6 +45,7 @@
       letter-spacing: 1ch;
       margin-bottom: 1ch;
       font-size: 3em;
+      font-family: kaiTi;
     }
 
     input,
@@ -59,12 +60,26 @@
       text-align: center;
       padding: 1mm 1em;
       cursor: pointer;
+      font-weight: bolder;
+      font-family: kaiTi;
     }
 
     .github-corner {
       position: fixed;
       top: 0;
       right: 0;
+    }
+
+    b {
+      padding: .5rem;
+      background: rgba(0, 0, 0, 0.5);
+      color: #fff;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 1em;
+      font-size: 2em;
     }
   </style>
 </head>
@@ -86,9 +101,72 @@
       <h1>医学影像识别</h1>
       <input placeholder="请输入账号">
       <input type="password" placeholder="请输入密码">
-      <button>登录</button>
+      <button id="login">登录</button>
     </div>
   </div>
 </body>
 
 </html>
+<script>
+  const login = document.querySelector('#login')
+  const id = document.querySelector('input')
+  const pwd = document.querySelector('input[type=password]')
+  const toggle = params => {
+    let p = document.createElement("b")
+    p.innerHTML = params
+    document.body.appendChild(p)
+    setTimeout(() => {
+      p.remove()
+    }, 2e3)
+    p.onclick = () => p.remove()
+  }
+  function checkString (str, reg) {
+    var regex = /^[a-zA-Z0-9]*$/;
+    return !reg.test(str);
+  }
+
+  login.onclick = function () {
+
+    if (!id.value) {
+      toggle('账号不能为空');
+      id.focus();
+      return;
+    }
+    if (checkString(id.value, /^\d+$/)) {
+      toggle('账号只能为数字');
+      id.focus();
+      return;
+    }
+    if (!pwd.value) {
+      toggle('密码不能为空');
+      pwd.focus();
+      return;
+    }
+    if (checkString(pwd.value, /^[!#$&(-,.0-:<-\[\]^`-~\-]+$/)) {
+      toggle('密码格式不正确');
+      pwd.focus();
+      return;
+    }
+    fetch('api/login', {
+      method: "POST"
+      , headers: {
+        'Content-Type': 'application/json'
+      }
+      , body: JSON.stringify({
+        id: id.value,
+        pwd: pwd.value
+      })
+    }).then(e => {
+      if (e.status !== 200) {
+        localStorage.clear()
+        toggle('账号或密码错误');
+        return Promise.reject();
+      }
+      return e.json()
+    }).then(e => {
+      localStorage.username = e.username;
+      localStorage.permission = e.permission;
+      setTimeout(() => location.href = 'index.html')
+    }).catch(err => console.log(err))
+  }
+</script>
